--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,19 @@
     "printWidth": 160,
     "tabWidth": 4,
     "trailingComma": "es5",
-    "endOfLine": "auto"
+    "endOfLine": "auto",
+    "overrides": [
+        {
+            "files": "**/*.yml",
+            "options": {
+                "tabWidth": 2
+            }
+        },
+        {
+            "files": "**/*.json",
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
 }
