--- a/.github/workflows/create-versioning-pr.yml
+++ b/.github/workflows/create-versioning-pr.yml
@@ -44,7 +44,7 @@ jobs:
       - run: pnpm build
 
       - name: Create Release Pull Request
-        uses: changesets/action@master
+        uses: changesets/action@v1.2.2
         with:
           version: pnpm run ci:version
         env:
