--- a/packages/extract-package-details/package.json
+++ b/packages/extract-package-details/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "find-and-replace-all",
+  "name": "extract-package-details",
   "version": "0.0.1",
-  "description": "Find and replace all instances of a string",
+  "description": "Extracts details from a package.json file",
   "main": "index.js",
   "scripts": {
     "build": "esbuild src/index.ts --bundle --platform=node --target=node16 --outdir=dist --sourcemap",
-    "publish": "cp dist/index.js ../../find-and-replace-all/index.js",
+    "publish": "cp dist/index.js ../../extract-package-details/index.js",
     "test": "jest"
   },
   "author": "Octopus Deploy",
