--- a/add-changeset/action.yml
+++ b/add-changeset/action.yml
@@ -21,5 +21,7 @@ inputs:
     description: "The current working directory where the .changeset folder lives"
     required: true
 outputs:
-  changeset:
+  changesetName:
     description: "The name of the changeset created"
+  changesetPath:
+    description: "The path where the changeset file was created"
