--- a/packages/add-changeset/package.json
+++ b/packages/add-changeset/package.json
@@ -14,6 +14,7 @@
     "@actions/core": "^1.7.0",
     "@changesets/types": "5.0.0",
     "@changesets/write": "0.1.8",
+    "@octopusdeploy/shared-action-utils": "0.0.1",
     "glob": "7.2.0"
   },
   "devDependencies": {
@@ -22,10 +23,10 @@
     "@types/node": "16.11.7",
     "esbuild": "0.14.38",
     "typescript": "4.6.3",
-    "jest": "27.5.1",
+    "jest": "26.6.3",
     "jest-expect-message": "1.0.2",
-    "jest-extended": "2.0.0",
+    "jest-extended": "1.2.1",
     "jest-runner-eslint": "1.0.0",
-    "ts-jest": "27.1.4"
+    "ts-jest": "26.5.6"
   }
 }
