--- a/packages/extract-package-details/package.json
+++ b/packages/extract-package-details/package.json
@@ -18,11 +18,11 @@
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "esbuild": "0.14.38",
-    "typescript": "4.6.3",
-    "jest": "27.5.1",
+    "jest": "26.6.3",
     "jest-expect-message": "1.0.2",
-    "jest-extended": "2.0.0",
+    "jest-extended": "1.2.1",
     "jest-runner-eslint": "1.0.0",
-    "ts-jest": "27.1.4"
+    "ts-jest": "26.5.6",
+    "typescript": "4.6.3"
   }
 }
