--- a/packages/add-changeset/package.json
+++ b/packages/add-changeset/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "extract-package-details",
+  "name": "add-changeset",
   "version": "0.0.1",
-  "description": "Extracts details from a package.json file",
+  "description": "Adds a changeset containing one or more projects",
   "main": "index.js",
   "scripts": {
     "build": "esbuild src/index.ts --bundle --platform=node --target=node16 --outdir=dist --sourcemap",
-    "publish": "cp dist/index.js ../../extract-package-details/index.js",
+    "publish": "cp dist/index.js ../../add-changeset/index.js",
     "test": "jest"
   },
   "author": "Octopus Deploy",
   "license": "Apache-2.0",
   "dependencies": {
     "@actions/core": "^1.7.0",
-    "@octopusdeploy/shared-action-utils": "0.0.1"
+    "@changesets/types": "5.0.0",
+    "@changesets/write": "0.1.8",
+    "@octopusdeploy/shared-action-utils": "0.0.1",
+    "glob": "7.2.0"
   },
   "devDependencies": {
+    "@types/glob": "7.2.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "esbuild": "0.14.38",
+    "typescript": "4.6.3",
     "jest": "26.6.3",
     "jest-expect-message": "1.0.2",
     "jest-extended": "1.2.1",
     "jest-runner-eslint": "1.0.0",
-    "ts-jest": "26.5.6",
-    "typescript": "4.6.3"
+    "ts-jest": "26.5.6"
   }
 }
