--- a/packages/add-changeset/package.json
+++ b/packages/add-changeset/package.json
@@ -1,6 +1,6 @@
 {
   "name": "add-changeset",
-  "version": "0.1.0-alpha.0",
+  "version": "0.0.1",
   "description": "Adds a changeset containing one or more projects",
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,7 @@
     "@actions/core": "^1.7.0",
     "@changesets/types": "5.0.0",
     "@changesets/write": "0.1.8",
-    "@octopusdeploy/shared-action-utils": "0.1.0-alpha.0",
+    "@octopusdeploy/shared-action-utils": "0.0.1",
     "glob": "7.2.0"
   },
   "devDependencies": {
