--- a/packages/extract-package-details/package.json
+++ b/packages/extract-package-details/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extract-package-details",
-  "version": "0.1.0-alpha.0",
+  "version": "0.0.1",
   "description": "Extracts details from a package.json file",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@actions/core": "^1.7.0",
-    "@octopusdeploy/shared-action-utils": "0.1.0-alpha.0"
+    "@octopusdeploy/shared-action-utils": "0.0.1"
   },
   "devDependencies": {
     "@types/jest": "27.4.1",
