--- a/packages/shared-action-utils/package.json
+++ b/packages/shared-action-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@octopusdeploy/shared-action-utils",
-  "version": "0.1.0-alpha.0",
+  "version": "0.0.1",
   "description": "Utilities to help build GitHub action ",
   "main": "dist/index.js",
   "scripts": {
