Adds initial docs for all actions Fixes required field for cwd input for add-changeset

--- a/add-changeset/action.yml
+++ b/add-changeset/action.yml
@@ -19,7 +19,7 @@ inputs:
     required: false
   cwd:
     description: "The current working directory where the .changeset folder lives"
-    required: true
+    required: false
 outputs:
   changesetName:
     description: "The name of the changeset created"
