--- a/packages/find-and-replace-all/package.json
+++ b/packages/find-and-replace-all/package.json
@@ -4,7 +4,7 @@
   "description": "Find and replace all instances of a string",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --platform=node --target=node16 --outdir=dist --sourcemap",
+    "build": "esbuild src/index.ts --bundle --platform=node --target=node16 --minify --outdir=../../find-and-replace-all",
     "publish": "cp dist/index.js ../../find-and-replace-all/index.js",
     "test": "jest"
   },
