--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "pnpm run build --filter={packages}",
     "changeset": "changeset",
-    "ci:version": "pnpm run changeset version && pnpm install --frozen-lockfile=false && pnpm run publish --filter={packages}",
+    "ci:version": "pnpm run changeset version && pnpm install --frozen-lockfile=false",
+    "ci:checkdist": "node ./packages/shared-action-utils/dist/checkActionDistributable.js",
+    "ci:publish": "node  ./packages/shared-action-utils/dist/publish.js",
     "lint:fix": "eslint . --fix",
     "lint": "eslint . --no-error-on-unmatched-pattern",
     "preinstall": "npx only-allow pnpm",
