--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "preinstall": "npx only-allow pnpm",
     "test": "pnpm --filter={packages/*} run test"
   },
+  "engines": {
+    "node": "^14.0.0",
+    "pnpm": "^7.9.5",
+    "npm": "not-supported.please-use-pnpm-instead"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OctopusDeploy/util-actions.git"
