fixing lint issues

--- a/.eslintignore
+++ b/.eslintignore
@@ -6,3 +6,4 @@ renovate-config.js
 find-and-replace-all/index.js
 extract-package-details/index.js
 add-changeset/index.js
+current-branch-name/index.js
