Update package names to include @octopusdeploy/ prefix

--- a/packages/add-changeset/package.json
+++ b/packages/add-changeset/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "add-changeset",
+  "name": "@octopusdeploy/add-changeset",
   "version": "0.2.0",
   "description": "Adds a changeset containing one or more projects",
   "main": "index.js",
