--- a/package.json
+++ b/package.json
@@ -46,5 +46,12 @@
     "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.6.2",
     "typescript": "4.6.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "@babel/traverse@<7.23.2": ">=7.23.2",
+      "semver@<5.7.2": ">=5.7.2",
+      "semver@>=7.0.0 <7.5.2": ">=7.5.2"
+    }
   }
 }
