--- a/.github/workflows/dryrun-update-dependencies.yml
+++ b/.github/workflows/dryrun-update-dependencies.yml
@@ -1,8 +1,5 @@
 name: Renovate
 on:
-  schedule:
-    - cron: "0 0 * * *"
-
   workflow_dispatch:
 jobs:
   renovate:
@@ -18,3 +15,4 @@ jobs:
           token: ${{ secrets.RENOVATE_GITHUB_TOKEN }}
         env:
           LOG_LEVEL: debug
+          RENOVATE_DRY_RUN: "full"
