--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -4,6 +4,13 @@ on:
     - cron: "0 0 * * *"
 
   workflow_dispatch:
+    inputs:
+      dryrunmode:
+        type: choice
+        description: Dry Run Mode
+        options:
+          - "null"
+          - "full"
 jobs:
   renovate:
     runs-on: ubuntu-latest
@@ -18,4 +25,4 @@ jobs:
           token: ${{ secrets.RENOVATE_GITHUB_TOKEN }}
         env:
           LOG_LEVEL: debug
-          RENOVATE_DRY_RUN: "full"
+          RENOVATE_DRY_RUN: ${{ github.event.inputs.dryrunmode != 'null' && github.event.inputs.dryrunmode || '' }}
