--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "yaml.schemas": {
     "https://json.schemastore.org/github-workflow.json": "file:///c%3A/src/OctopusDeploy/util-actions/.github/workflows/build.yml"
-  }
+  },
+  "eslint.useFlatConfig": true
 }
