--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "pnpm --filter={packages/*} run test"
   },
   "engines": {
-    "node": "20.18.3",
+    "node": "24.11.1",
     "pnpm": "8.15.9",
     "npm": "not-supported.please-use-pnpm-instead"
   },
@@ -36,16 +36,17 @@
   "homepage": "https://github.com/OctopusDeploy/util-actions#readme",
   "devDependencies": {
     "@changesets/cli": "2.28.1",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
-    "eslint": "8.57.1",
+    "@typescript-eslint/eslint-plugin": "8.48.1",
+    "@typescript-eslint/parser": "8.48.1",
+    "eslint": "9.39.1",
     "eslint-config-prettier": "8.10.2",
     "eslint-plugin-import": "2.32.0",
-    "eslint-plugin-jest": "26.9.0",
+    "eslint-plugin-jest": "29.2.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "4.2.5",
+    "globals": "16.5.0",
     "prettier": "2.8.8",
-    "typescript": "4.9.5"
+    "typescript": "5.9.3"
   },
   "pnpm": {
     "overrides": {
