--- a/packages/add-changeset/package.json
+++ b/packages/add-changeset/package.json
@@ -12,16 +12,16 @@
   "dependencies": {
     "@changesets/types": "5.2.1",
     "@changesets/write": "0.1.9",
-    "@octopusdeploy/shared-action-utils": "0.3.1",
+    "@octopusdeploy/shared-action-utils": "workspace:*",
     "glob": "7.2.3"
   },
   "devDependencies": {
     "@types/glob": "7.2.0",
     "@types/jest": "27.5.2",
-    "@types/node": "20.17.58",
+    "@types/node": "24.7.2",
     "esbuild": "0.14.54",
-    "eslint": "8.57.1",
-    "typescript": "4.9.5",
+    "eslint": "9.39.1",
+    "typescript": "5.9.3",
     "jest": "26.6.3",
     "jest-expect-message": "1.1.3",
     "jest-extended": "1.2.1",
