--- a/packages/current-branch-name/package.json
+++ b/packages/current-branch-name/package.json
@@ -10,18 +10,18 @@
   "author": "Octopus Deploy",
   "license": "Apache-2.0",
   "dependencies": {
-    "@octopusdeploy/shared-action-utils": "0.3.1"
+    "@octopusdeploy/shared-action-utils": "workspace:*"
   },
   "devDependencies": {
     "@types/jest": "27.5.2",
-    "@types/node": "20.17.58",
+    "@types/node": "24.7.2",
     "esbuild": "0.14.54",
-    "eslint": "8.57.1",
+    "eslint": "9.39.1",
     "jest": "26.6.3",
     "jest-expect-message": "1.1.3",
     "jest-extended": "1.2.1",
     "jest-runner-eslint": "1.2.0",
     "ts-jest": "26.5.6",
-    "typescript": "4.9.5"
+    "typescript": "5.9.3"
   }
 }
