--- a/packages/shared-action-utils/package.json
+++ b/packages/shared-action-utils/package.json
@@ -14,7 +14,8 @@
     "glob": "7.2.3"
   },
   "devDependencies": {
-    "@types/node": "20.17.58",
-    "@types/glob": "7.2.0"
+    "@types/node": "24.7.2",
+    "@types/glob": "7.2.0",
+    "typescript": "5.9.3"
   }
 }
