--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@typescript-eslint/parser": "8.48.1",
     "eslint": "9.39.1",
     "eslint-config-prettier": "8.10.2",
+    "eslint-plugin-github": "^6.0.0",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.2.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
